// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderization when charts available should render the list of charts 1`] = `
<section
  className="Catalog"
>
  <PageHeader>
    <h1>
      Catalog
    </h1>
    <SearchFilter
      className="margin-l-big"
      onChange={[Function]}
      onSubmit={[Function]}
      placeholder="search charts..."
      value=""
    />
  </PageHeader>
  <LoadingWrapper
    loaded={true}
    type={0}
  >
    <div
      className="row"
    >
      <div
        className=""
      >
        <CardGrid>
          <CatalogItem
            item={
              Object {
                "description": "",
                "icon": undefined,
                "id": "foo",
                "name": undefined,
                "namespace": "kubeapps",
                "repoName": "foo",
                "type": "chart",
                "version": "v1.0.0",
              }
            }
            key="chart/foo/undefined"
          />
          <CatalogItem
            item={
              Object {
                "description": "",
                "icon": undefined,
                "id": "bar",
                "name": undefined,
                "namespace": "kubeapps",
                "repoName": "bar",
                "type": "chart",
                "version": "v2.0.0",
              }
            }
            key="chart/bar/undefined"
          />
        </CardGrid>
      </div>
    </div>
  </LoadingWrapper>
</section>
`;

exports[`renderization when fetching apps loading spinner matches the snapshot 1`] = `
<section
  className="Catalog"
>
  <PageHeader>
    <h1>
      Catalog
    </h1>
    <SearchFilter
      className="margin-l-big"
      onChange={[Function]}
      onSubmit={[Function]}
      placeholder="search charts..."
      value=""
    />
  </PageHeader>
  <LoadingWrapper
    loaded={false}
    type={0}
  >
    <div
      className="row"
    >
      <div
        className=""
      >
        <CardGrid />
      </div>
    </div>
  </LoadingWrapper>
</section>
`;

exports[`renderization when no charts should render an error 1`] = `
<MessageAlertPage
  level="warning"
>
  <div>
    <h5>
      Charts not found.
    </h5>
    Manage your Helm chart repositories in Kubeapps by visiting the
     
    <Link
      to="/config/repos"
    >
      App repositories configuration
    </Link>
     page.
  </div>
</MessageAlertPage>
`;
